--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
-.horizontal{
+body{
+    overflow-x: hidden;
+    
+
+}
+
+
+
+/* .horizontal{
     width:100%;
     color:grey;
     background-color: grey;
     opacity: calc(0.5);
-}
+} */
 
 
 .btnd{
     background-image: url("images/team.png");
     width: 1440px;
     height:650px;
+    background-repeat: no-repeat;
     /* filter: brightness(50%); */
 }
 
@@ -18,7 +27,3 @@
     height:690px;
 }
 
-.body{
-    overflow-x: hidden;
-
-}
