--- a/style.css
+++ b/style.css
@@ -47,6 +47,11 @@ padding:20px;
     
 }
 
+.respor{
+    visibility: hidden;
+    margin-left:500px;
+}
+
 
 
 
@@ -65,6 +70,11 @@ padding:20px;
     height:650px;
     background-repeat: no-repeat;
     /* filter: brightness(50%); */
+}
+
+.bopy{
+    visibility: hidden;
+    position:absolute;
 }
 
 .btnx{
@@ -126,6 +136,8 @@ padding:20px;
     .intu{
         flex-wrap: wrap;
     }
+
+    
 
    
 
