--- a/index.css
+++ b/index.css
@@ -661,6 +661,8 @@
   left: 67.5px;
   border-top: 1px solid var(--color-gray-400);
   box-sizing: border-box;
+  border-radius: 5px;
+  background-color: gray;
   width: 101px;
   height: 1px;
 }
