--- a/index.css
+++ b/index.css
@@ -852,6 +852,7 @@
   position: relative;
   background-color: var(--color-white);
   width: 100%;
+  /* 6093 */
   height: 6093px;
   overflow: hidden;
   text-align: center;
